t3/ply/python/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PUNTO_COMA vars bloque
Rule 2     program -> PROGRAM ID PUNTO_COMA bloque
Rule 3     vars -> VAR vars2
Rule 4     vars2 -> ID vars3
Rule 5     vars3 -> COMA vars2
Rule 6     vars3 -> ASIGNACION TIPO PUNTO_COMA vars2
Rule 7     vars3 -> ASIGNACION TIPO PUNTO_COMA
Rule 8     bloque -> CORCHETE_IZQ bloque2 CORCHETE_DER
Rule 9     bloque2 -> estatuto
Rule 10    bloque2 -> estatuto bloque2
Rule 11    estatuto -> asignacion
Rule 12    estatuto -> condicion
Rule 13    estatuto -> escritura
Rule 14    asignacion -> ID ASIGNACION expresion PUNTO_COMA
Rule 15    escritura -> ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA
Rule 16    escritura2 -> expresion
Rule 17    escritura2 -> expresion COMA escritura2
Rule 18    escritura2 -> STRING
Rule 19    escritura2 -> STRING COMA escritura2
Rule 20    expresion -> exp
Rule 21    expresion -> exp EXPRESION exp
Rule 22    exp -> termino
Rule 23    exp -> termino EXP termino
Rule 24    termino -> factor
Rule 25    termino -> factor TERMINO factor
Rule 26    var_cte -> ID
Rule 27    var_cte -> ENTERO
Rule 28    var_cte -> FLOTANTE
Rule 29    condicion -> IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2
Rule 30    condicion2 -> bloque PUNTO_COMA
Rule 31    condicion2 -> bloque ELSE bloque PUNTO_COMA
Rule 32    factor -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 33    factor -> var_cte
Rule 34    factor -> EXP var_cte

Terminals, with rules where they appear

ASIGNACION           : 6 7 14
COMA                 : 5 17 19
CORCHETE_DER         : 8
CORCHETE_IZQ         : 8
ELSE                 : 31
ENTERO               : 27
ESCRITURA            : 15
EXP                  : 23 34
EXPRESION            : 21
FLOTANTE             : 28
ID                   : 1 2 4 14 26
IF                   : 29
PARENTESIS_DER       : 15 29 32
PARENTESIS_IZQ       : 15 29 32
PROGRAM              : 1 2
PUNTO_COMA           : 1 2 6 7 14 15 30 31
STRING               : 18 19
TERMINO              : 25
TIPO                 : 6 7
VAR                  : 3
error                : 

Nonterminals, with rules where they appear

asignacion           : 11
bloque               : 1 2 30 31 31
bloque2              : 8 10
condicion            : 12
condicion2           : 29
escritura            : 13
escritura2           : 15 17 19
estatuto             : 9 10
exp                  : 20 21 21
expresion            : 14 16 17 29 32
factor               : 24 25 25
program              : 0
termino              : 22 23 23
var_cte              : 33 34
vars                 : 1
vars2                : 3 5 6
vars3                : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PUNTO_COMA vars bloque
    (2) program -> . PROGRAM ID PUNTO_COMA bloque

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PUNTO_COMA vars bloque
    (2) program -> PROGRAM . ID PUNTO_COMA bloque

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PUNTO_COMA vars bloque
    (2) program -> PROGRAM ID . PUNTO_COMA bloque

    PUNTO_COMA      shift and go to state 4


state 4

    (1) program -> PROGRAM ID PUNTO_COMA . vars bloque
    (2) program -> PROGRAM ID PUNTO_COMA . bloque
    (3) vars -> . VAR vars2
    (8) bloque -> . CORCHETE_IZQ bloque2 CORCHETE_DER

    VAR             shift and go to state 7
    CORCHETE_IZQ    shift and go to state 6

    bloque                         shift and go to state 8
    vars                           shift and go to state 5

state 5

    (1) program -> PROGRAM ID PUNTO_COMA vars . bloque
    (8) bloque -> . CORCHETE_IZQ bloque2 CORCHETE_DER

    CORCHETE_IZQ    shift and go to state 6

    bloque                         shift and go to state 9

state 6

    (8) bloque -> CORCHETE_IZQ . bloque2 CORCHETE_DER
    (9) bloque2 -> . estatuto
    (10) bloque2 -> . estatuto bloque2
    (11) estatuto -> . asignacion
    (12) estatuto -> . condicion
    (13) estatuto -> . escritura
    (14) asignacion -> . ID ASIGNACION expresion PUNTO_COMA
    (29) condicion -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2
    (15) escritura -> . ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA

    ID              shift and go to state 16
    IF              shift and go to state 15
    ESCRITURA       shift and go to state 14

    bloque2                        shift and go to state 10
    asignacion                     shift and go to state 11
    estatuto                       shift and go to state 12
    condicion                      shift and go to state 13
    escritura                      shift and go to state 17

state 7

    (3) vars -> VAR . vars2
    (4) vars2 -> . ID vars3

    ID              shift and go to state 19

    vars2                          shift and go to state 18

state 8

    (2) program -> PROGRAM ID PUNTO_COMA bloque .

    $end            reduce using rule 2 (program -> PROGRAM ID PUNTO_COMA bloque .)


state 9

    (1) program -> PROGRAM ID PUNTO_COMA vars bloque .

    $end            reduce using rule 1 (program -> PROGRAM ID PUNTO_COMA vars bloque .)


state 10

    (8) bloque -> CORCHETE_IZQ bloque2 . CORCHETE_DER

    CORCHETE_DER    shift and go to state 20


state 11

    (11) estatuto -> asignacion .

    ID              reduce using rule 11 (estatuto -> asignacion .)
    IF              reduce using rule 11 (estatuto -> asignacion .)
    ESCRITURA       reduce using rule 11 (estatuto -> asignacion .)
    CORCHETE_DER    reduce using rule 11 (estatuto -> asignacion .)


state 12

    (9) bloque2 -> estatuto .
    (10) bloque2 -> estatuto . bloque2
    (9) bloque2 -> . estatuto
    (10) bloque2 -> . estatuto bloque2
    (11) estatuto -> . asignacion
    (12) estatuto -> . condicion
    (13) estatuto -> . escritura
    (14) asignacion -> . ID ASIGNACION expresion PUNTO_COMA
    (29) condicion -> . IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2
    (15) escritura -> . ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA

    CORCHETE_DER    reduce using rule 9 (bloque2 -> estatuto .)
    ID              shift and go to state 16
    IF              shift and go to state 15
    ESCRITURA       shift and go to state 14

    bloque2                        shift and go to state 21
    asignacion                     shift and go to state 11
    estatuto                       shift and go to state 12
    condicion                      shift and go to state 13
    escritura                      shift and go to state 17

state 13

    (12) estatuto -> condicion .

    ID              reduce using rule 12 (estatuto -> condicion .)
    IF              reduce using rule 12 (estatuto -> condicion .)
    ESCRITURA       reduce using rule 12 (estatuto -> condicion .)
    CORCHETE_DER    reduce using rule 12 (estatuto -> condicion .)


state 14

    (15) escritura -> ESCRITURA . PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA

    PARENTESIS_IZQ  shift and go to state 22


state 15

    (29) condicion -> IF . PARENTESIS_IZQ expresion PARENTESIS_DER condicion2

    PARENTESIS_IZQ  shift and go to state 23


state 16

    (14) asignacion -> ID . ASIGNACION expresion PUNTO_COMA

    ASIGNACION      shift and go to state 24


state 17

    (13) estatuto -> escritura .

    ID              reduce using rule 13 (estatuto -> escritura .)
    IF              reduce using rule 13 (estatuto -> escritura .)
    ESCRITURA       reduce using rule 13 (estatuto -> escritura .)
    CORCHETE_DER    reduce using rule 13 (estatuto -> escritura .)


state 18

    (3) vars -> VAR vars2 .

    CORCHETE_IZQ    reduce using rule 3 (vars -> VAR vars2 .)


state 19

    (4) vars2 -> ID . vars3
    (5) vars3 -> . COMA vars2
    (6) vars3 -> . ASIGNACION TIPO PUNTO_COMA vars2
    (7) vars3 -> . ASIGNACION TIPO PUNTO_COMA

    COMA            shift and go to state 27
    ASIGNACION      shift and go to state 25

    vars3                          shift and go to state 26

state 20

    (8) bloque -> CORCHETE_IZQ bloque2 CORCHETE_DER .

    PUNTO_COMA      reduce using rule 8 (bloque -> CORCHETE_IZQ bloque2 CORCHETE_DER .)
    ELSE            reduce using rule 8 (bloque -> CORCHETE_IZQ bloque2 CORCHETE_DER .)
    $end            reduce using rule 8 (bloque -> CORCHETE_IZQ bloque2 CORCHETE_DER .)


state 21

    (10) bloque2 -> estatuto bloque2 .

    CORCHETE_DER    reduce using rule 10 (bloque2 -> estatuto bloque2 .)


state 22

    (15) escritura -> ESCRITURA PARENTESIS_IZQ . escritura2 PARENTESIS_DER PUNTO_COMA
    (16) escritura2 -> . expresion
    (17) escritura2 -> . expresion COMA escritura2
    (18) escritura2 -> . STRING
    (19) escritura2 -> . STRING COMA escritura2
    (20) expresion -> . exp
    (21) expresion -> . exp EXPRESION exp
    (22) exp -> . termino
    (23) exp -> . termino EXP termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    STRING          shift and go to state 30
    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    expresion                      shift and go to state 28
    var_cte                        shift and go to state 32
    termino                        shift and go to state 34
    exp                            shift and go to state 35
    factor                         shift and go to state 36
    escritura2                     shift and go to state 37

state 23

    (29) condicion -> IF PARENTESIS_IZQ . expresion PARENTESIS_DER condicion2
    (20) expresion -> . exp
    (21) expresion -> . exp EXPRESION exp
    (22) exp -> . termino
    (23) exp -> . termino EXP termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    expresion                      shift and go to state 40
    var_cte                        shift and go to state 32
    termino                        shift and go to state 34
    exp                            shift and go to state 35
    factor                         shift and go to state 36

state 24

    (14) asignacion -> ID ASIGNACION . expresion PUNTO_COMA
    (20) expresion -> . exp
    (21) expresion -> . exp EXPRESION exp
    (22) exp -> . termino
    (23) exp -> . termino EXP termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    expresion                      shift and go to state 41
    var_cte                        shift and go to state 32
    termino                        shift and go to state 34
    exp                            shift and go to state 35
    factor                         shift and go to state 36

state 25

    (6) vars3 -> ASIGNACION . TIPO PUNTO_COMA vars2
    (7) vars3 -> ASIGNACION . TIPO PUNTO_COMA

    TIPO            shift and go to state 42


state 26

    (4) vars2 -> ID vars3 .

    CORCHETE_IZQ    reduce using rule 4 (vars2 -> ID vars3 .)


state 27

    (5) vars3 -> COMA . vars2
    (4) vars2 -> . ID vars3

    ID              shift and go to state 19

    vars2                          shift and go to state 43

state 28

    (16) escritura2 -> expresion .
    (17) escritura2 -> expresion . COMA escritura2

    PARENTESIS_DER  reduce using rule 16 (escritura2 -> expresion .)
    COMA            shift and go to state 44


state 29

    (32) factor -> PARENTESIS_IZQ . expresion PARENTESIS_DER
    (20) expresion -> . exp
    (21) expresion -> . exp EXPRESION exp
    (22) exp -> . termino
    (23) exp -> . termino EXP termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    expresion                      shift and go to state 45
    var_cte                        shift and go to state 32
    termino                        shift and go to state 34
    exp                            shift and go to state 35
    factor                         shift and go to state 36

state 30

    (18) escritura2 -> STRING .
    (19) escritura2 -> STRING . COMA escritura2

    PARENTESIS_DER  reduce using rule 18 (escritura2 -> STRING .)
    COMA            shift and go to state 46


state 31

    (28) var_cte -> FLOTANTE .

    TERMINO         reduce using rule 28 (var_cte -> FLOTANTE .)
    EXP             reduce using rule 28 (var_cte -> FLOTANTE .)
    EXPRESION       reduce using rule 28 (var_cte -> FLOTANTE .)
    COMA            reduce using rule 28 (var_cte -> FLOTANTE .)
    PARENTESIS_DER  reduce using rule 28 (var_cte -> FLOTANTE .)
    PUNTO_COMA      reduce using rule 28 (var_cte -> FLOTANTE .)


state 32

    (33) factor -> var_cte .

    TERMINO         reduce using rule 33 (factor -> var_cte .)
    EXP             reduce using rule 33 (factor -> var_cte .)
    EXPRESION       reduce using rule 33 (factor -> var_cte .)
    PUNTO_COMA      reduce using rule 33 (factor -> var_cte .)
    COMA            reduce using rule 33 (factor -> var_cte .)
    PARENTESIS_DER  reduce using rule 33 (factor -> var_cte .)


state 33

    (34) factor -> EXP . var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    var_cte                        shift and go to state 47

state 34

    (22) exp -> termino .
    (23) exp -> termino . EXP termino

    EXPRESION       reduce using rule 22 (exp -> termino .)
    COMA            reduce using rule 22 (exp -> termino .)
    PARENTESIS_DER  reduce using rule 22 (exp -> termino .)
    PUNTO_COMA      reduce using rule 22 (exp -> termino .)
    EXP             shift and go to state 48


state 35

    (20) expresion -> exp .
    (21) expresion -> exp . EXPRESION exp

    COMA            reduce using rule 20 (expresion -> exp .)
    PARENTESIS_DER  reduce using rule 20 (expresion -> exp .)
    PUNTO_COMA      reduce using rule 20 (expresion -> exp .)
    EXPRESION       shift and go to state 49


state 36

    (24) termino -> factor .
    (25) termino -> factor . TERMINO factor

    EXP             reduce using rule 24 (termino -> factor .)
    EXPRESION       reduce using rule 24 (termino -> factor .)
    COMA            reduce using rule 24 (termino -> factor .)
    PARENTESIS_DER  reduce using rule 24 (termino -> factor .)
    PUNTO_COMA      reduce using rule 24 (termino -> factor .)
    TERMINO         shift and go to state 50


state 37

    (15) escritura -> ESCRITURA PARENTESIS_IZQ escritura2 . PARENTESIS_DER PUNTO_COMA

    PARENTESIS_DER  shift and go to state 51


state 38

    (27) var_cte -> ENTERO .

    TERMINO         reduce using rule 27 (var_cte -> ENTERO .)
    EXP             reduce using rule 27 (var_cte -> ENTERO .)
    EXPRESION       reduce using rule 27 (var_cte -> ENTERO .)
    COMA            reduce using rule 27 (var_cte -> ENTERO .)
    PARENTESIS_DER  reduce using rule 27 (var_cte -> ENTERO .)
    PUNTO_COMA      reduce using rule 27 (var_cte -> ENTERO .)


state 39

    (26) var_cte -> ID .

    TERMINO         reduce using rule 26 (var_cte -> ID .)
    EXP             reduce using rule 26 (var_cte -> ID .)
    EXPRESION       reduce using rule 26 (var_cte -> ID .)
    COMA            reduce using rule 26 (var_cte -> ID .)
    PARENTESIS_DER  reduce using rule 26 (var_cte -> ID .)
    PUNTO_COMA      reduce using rule 26 (var_cte -> ID .)


state 40

    (29) condicion -> IF PARENTESIS_IZQ expresion . PARENTESIS_DER condicion2

    PARENTESIS_DER  shift and go to state 52


state 41

    (14) asignacion -> ID ASIGNACION expresion . PUNTO_COMA

    PUNTO_COMA      shift and go to state 53


state 42

    (6) vars3 -> ASIGNACION TIPO . PUNTO_COMA vars2
    (7) vars3 -> ASIGNACION TIPO . PUNTO_COMA

    PUNTO_COMA      shift and go to state 54


state 43

    (5) vars3 -> COMA vars2 .

    CORCHETE_IZQ    reduce using rule 5 (vars3 -> COMA vars2 .)


state 44

    (17) escritura2 -> expresion COMA . escritura2
    (16) escritura2 -> . expresion
    (17) escritura2 -> . expresion COMA escritura2
    (18) escritura2 -> . STRING
    (19) escritura2 -> . STRING COMA escritura2
    (20) expresion -> . exp
    (21) expresion -> . exp EXPRESION exp
    (22) exp -> . termino
    (23) exp -> . termino EXP termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    STRING          shift and go to state 30
    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    expresion                      shift and go to state 28
    var_cte                        shift and go to state 32
    termino                        shift and go to state 34
    exp                            shift and go to state 35
    factor                         shift and go to state 36
    escritura2                     shift and go to state 55

state 45

    (32) factor -> PARENTESIS_IZQ expresion . PARENTESIS_DER

    PARENTESIS_DER  shift and go to state 56


state 46

    (19) escritura2 -> STRING COMA . escritura2
    (16) escritura2 -> . expresion
    (17) escritura2 -> . expresion COMA escritura2
    (18) escritura2 -> . STRING
    (19) escritura2 -> . STRING COMA escritura2
    (20) expresion -> . exp
    (21) expresion -> . exp EXPRESION exp
    (22) exp -> . termino
    (23) exp -> . termino EXP termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    STRING          shift and go to state 30
    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    expresion                      shift and go to state 28
    var_cte                        shift and go to state 32
    termino                        shift and go to state 34
    exp                            shift and go to state 35
    factor                         shift and go to state 36
    escritura2                     shift and go to state 57

state 47

    (34) factor -> EXP var_cte .

    TERMINO         reduce using rule 34 (factor -> EXP var_cte .)
    EXP             reduce using rule 34 (factor -> EXP var_cte .)
    EXPRESION       reduce using rule 34 (factor -> EXP var_cte .)
    PUNTO_COMA      reduce using rule 34 (factor -> EXP var_cte .)
    COMA            reduce using rule 34 (factor -> EXP var_cte .)
    PARENTESIS_DER  reduce using rule 34 (factor -> EXP var_cte .)


state 48

    (23) exp -> termino EXP . termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    var_cte                        shift and go to state 32
    termino                        shift and go to state 58
    factor                         shift and go to state 36

state 49

    (21) expresion -> exp EXPRESION . exp
    (22) exp -> . termino
    (23) exp -> . termino EXP termino
    (24) termino -> . factor
    (25) termino -> . factor TERMINO factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    var_cte                        shift and go to state 32
    termino                        shift and go to state 34
    exp                            shift and go to state 59
    factor                         shift and go to state 36

state 50

    (25) termino -> factor TERMINO . factor
    (32) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (33) factor -> . var_cte
    (34) factor -> . EXP var_cte
    (26) var_cte -> . ID
    (27) var_cte -> . ENTERO
    (28) var_cte -> . FLOTANTE

    PARENTESIS_IZQ  shift and go to state 29
    EXP             shift and go to state 33
    ID              shift and go to state 39
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 31

    var_cte                        shift and go to state 32
    factor                         shift and go to state 60

state 51

    (15) escritura -> ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 61


state 52

    (29) condicion -> IF PARENTESIS_IZQ expresion PARENTESIS_DER . condicion2
    (30) condicion2 -> . bloque PUNTO_COMA
    (31) condicion2 -> . bloque ELSE bloque PUNTO_COMA
    (8) bloque -> . CORCHETE_IZQ bloque2 CORCHETE_DER

    CORCHETE_IZQ    shift and go to state 6

    bloque                         shift and go to state 63
    condicion2                     shift and go to state 62

state 53

    (14) asignacion -> ID ASIGNACION expresion PUNTO_COMA .

    ID              reduce using rule 14 (asignacion -> ID ASIGNACION expresion PUNTO_COMA .)
    IF              reduce using rule 14 (asignacion -> ID ASIGNACION expresion PUNTO_COMA .)
    ESCRITURA       reduce using rule 14 (asignacion -> ID ASIGNACION expresion PUNTO_COMA .)
    CORCHETE_DER    reduce using rule 14 (asignacion -> ID ASIGNACION expresion PUNTO_COMA .)


state 54

    (6) vars3 -> ASIGNACION TIPO PUNTO_COMA . vars2
    (7) vars3 -> ASIGNACION TIPO PUNTO_COMA .
    (4) vars2 -> . ID vars3

    CORCHETE_IZQ    reduce using rule 7 (vars3 -> ASIGNACION TIPO PUNTO_COMA .)
    ID              shift and go to state 19

    vars2                          shift and go to state 64

state 55

    (17) escritura2 -> expresion COMA escritura2 .

    PARENTESIS_DER  reduce using rule 17 (escritura2 -> expresion COMA escritura2 .)


state 56

    (32) factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .

    TERMINO         reduce using rule 32 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    EXP             reduce using rule 32 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    EXPRESION       reduce using rule 32 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    PUNTO_COMA      reduce using rule 32 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    COMA            reduce using rule 32 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    PARENTESIS_DER  reduce using rule 32 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)


state 57

    (19) escritura2 -> STRING COMA escritura2 .

    PARENTESIS_DER  reduce using rule 19 (escritura2 -> STRING COMA escritura2 .)


state 58

    (23) exp -> termino EXP termino .

    EXPRESION       reduce using rule 23 (exp -> termino EXP termino .)
    COMA            reduce using rule 23 (exp -> termino EXP termino .)
    PARENTESIS_DER  reduce using rule 23 (exp -> termino EXP termino .)
    PUNTO_COMA      reduce using rule 23 (exp -> termino EXP termino .)


state 59

    (21) expresion -> exp EXPRESION exp .

    COMA            reduce using rule 21 (expresion -> exp EXPRESION exp .)
    PARENTESIS_DER  reduce using rule 21 (expresion -> exp EXPRESION exp .)
    PUNTO_COMA      reduce using rule 21 (expresion -> exp EXPRESION exp .)


state 60

    (25) termino -> factor TERMINO factor .

    EXP             reduce using rule 25 (termino -> factor TERMINO factor .)
    EXPRESION       reduce using rule 25 (termino -> factor TERMINO factor .)
    COMA            reduce using rule 25 (termino -> factor TERMINO factor .)
    PARENTESIS_DER  reduce using rule 25 (termino -> factor TERMINO factor .)
    PUNTO_COMA      reduce using rule 25 (termino -> factor TERMINO factor .)


state 61

    (15) escritura -> ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA .

    ID              reduce using rule 15 (escritura -> ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA .)
    IF              reduce using rule 15 (escritura -> ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA .)
    ESCRITURA       reduce using rule 15 (escritura -> ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA .)
    CORCHETE_DER    reduce using rule 15 (escritura -> ESCRITURA PARENTESIS_IZQ escritura2 PARENTESIS_DER PUNTO_COMA .)


state 62

    (29) condicion -> IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2 .

    ID              reduce using rule 29 (condicion -> IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2 .)
    IF              reduce using rule 29 (condicion -> IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2 .)
    ESCRITURA       reduce using rule 29 (condicion -> IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2 .)
    CORCHETE_DER    reduce using rule 29 (condicion -> IF PARENTESIS_IZQ expresion PARENTESIS_DER condicion2 .)


state 63

    (30) condicion2 -> bloque . PUNTO_COMA
    (31) condicion2 -> bloque . ELSE bloque PUNTO_COMA

    PUNTO_COMA      shift and go to state 65
    ELSE            shift and go to state 66


state 64

    (6) vars3 -> ASIGNACION TIPO PUNTO_COMA vars2 .

    CORCHETE_IZQ    reduce using rule 6 (vars3 -> ASIGNACION TIPO PUNTO_COMA vars2 .)


state 65

    (30) condicion2 -> bloque PUNTO_COMA .

    ID              reduce using rule 30 (condicion2 -> bloque PUNTO_COMA .)
    IF              reduce using rule 30 (condicion2 -> bloque PUNTO_COMA .)
    ESCRITURA       reduce using rule 30 (condicion2 -> bloque PUNTO_COMA .)
    CORCHETE_DER    reduce using rule 30 (condicion2 -> bloque PUNTO_COMA .)


state 66

    (31) condicion2 -> bloque ELSE . bloque PUNTO_COMA
    (8) bloque -> . CORCHETE_IZQ bloque2 CORCHETE_DER

    CORCHETE_IZQ    shift and go to state 6

    bloque                         shift and go to state 67

state 67

    (31) condicion2 -> bloque ELSE bloque . PUNTO_COMA

    PUNTO_COMA      shift and go to state 68


state 68

    (31) condicion2 -> bloque ELSE bloque PUNTO_COMA .

    ID              reduce using rule 31 (condicion2 -> bloque ELSE bloque PUNTO_COMA .)
    IF              reduce using rule 31 (condicion2 -> bloque ELSE bloque PUNTO_COMA .)
    ESCRITURA       reduce using rule 31 (condicion2 -> bloque ELSE bloque PUNTO_COMA .)
    CORCHETE_DER    reduce using rule 31 (condicion2 -> bloque ELSE bloque PUNTO_COMA .)

